# CLionProjects

cpsc256/: CMakeLists.txt
cpsc256/Examples/Final_Exam_Solutions/: q1.c  q2.c  q3.cpp  q4.c  q5.cpp  q6.cpp  q7.c
cpsc256/Examples/Final_Exam_Solutions/q1/: final_q1
cpsc256/Examples/Final_Exam_Solutions/q2/: final_q2
cpsc256/Examples/Final_Exam_Solutions/q3/: final_q3
cpsc256/Examples/Final_Exam_Solutions/q4/: final_q4
cpsc256/Examples/Final_Exam_Solutions/q5/: final_q5
cpsc256/Examples/Final_Exam_Solutions/q6/: final_q6
cpsc256/Examples/Final_Exam_Solutions/q7/: final_q7
cpsc256/Examples/Midterm2_Practice/: q1a.c  q3b  q3b.c
cpsc256/Examples/Midterm2_Solutions/: CPSC256_Second_Midterm.docx  factorial.c  q1a  q1a.c  q1b  q1b.c  q2b.txt  q3a  q3a.c  q3b  q3b.c
cpsc256/Examples/Midterm4_Practice/: CPSC 256 Midterm Test 4.docx  midterm4_q1  midterm4_q2  q1.cpp  q2.cpp
cpsc256/Examples/Midterm4_Practice/q1/: midterm_q1practice
cpsc256/Examples/Midterm4_Practice/q2/: midterm_q2practice
cpsc256/Examples/Midterm4_Solutions/: CPSC 256 Midterm Test 4 Actual.docx  q1.cpp  q2.cpp
cpsc256/Examples/Midterm4_Solutions/q1/: midterm4_q1actual
cpsc256/Examples/Midterm4_Solutions/q2/: midterm4_q2actual
cpsc256/Examples/Other_Examples/ArchimedianSpiral/: ArchimedianSpiral  gnuplotData  gnuplotScript  main.c
cpsc256/Examples/Other_Examples/AverageDistance/: AverageDistance  gnuplotHistData  main.c
cpsc256/Examples/Other_Examples/ECalc/: ECalc
cpsc256/Examples/Other_Examples/ECalcPlot/: ECalcPlot  main.c
cpsc256/Examples/Other_Examples/Midterm_Solutions/: Midterm_Solutions
cpsc256/Examples/Other_Examples/NewtonsAlgorithm/: NewtonsAlgorithm
cpsc256/Examples/Other_Examples/NewtonsAlgorithmComplete/: NewtonsAlgorithmComplete
cpsc256/Examples/Other_Examples/NewtonsAlgorithmVisualization/: NewtonsAlgorithmVisualization  gnuplotData  gnuplotScript  main.c
cpsc256/Examples/Other_Examples/NumericalPrecision/: NumericalPrecision  gnuplotScript  main.c
cpsc256/Examples/Other_Examples/RandomNumberGenerator/: RandomNumberGenerator
cpsc256/Examples/Other_Examples/SockPulling/: SockPulling  main.c
cpsc256/Examples/Other_Examples/Solitaire/: Solitaire  gnuplotData  gnuplotHistData  main.c
cpsc256/Examples/Other_Examples/SumOrdering/: SumOrdering  gnuplotData1  gnuplotData2  gnuplotScript  main.c
cpsc256/Examples/Other_Examples/TriangleArea/: TriangleArea  main.c
cpsc256/Examples/Other_Examples/UnitTesting/: UnitTesting
cpsc256/Examples/Other_Examples/gplot/: gplot_basic.c  gplot_errors.c  gplot_errorstheory.c  gplot_theory.c
cpsc256/Examples/Other_Examples/gplot_test/: gnuplotScript  gplot_test  main.c
cpsc256/Examples/Projects/Project1Part1/: Project1Part1
cpsc256/Examples/Week1/HelloWorld/: HelloWorld  Makefile
cpsc256/Examples/Week1/PrimitiveDataTypes/: PrimitiveDataTypes
cpsc256/Examples/Week10/AnimalsInheritancePolymorphism/: AnimalsInheritancePolymorphism  main.cpp
cpsc256/Examples/Week10/FunctionTemplates/: FunctionTemplate.h  FunctionTemplates  main.cpp
cpsc256/Examples/Week10/InheritancePolymorphism/: Business.h  InheritancePolymorphism  main.cpp
cpsc256/Examples/Week10/OperatorOverloading/: OperatorOverloading  TimeHrMn.cpp  main.cpp
cpsc256/Examples/Week11/BasicLinkedList/: BasicLinkedList  IntNode.h  main.cpp
cpsc256/Examples/Week11/BookLibraryZybooks/: BookLibary.cpp  BookLibary.h  BookLibraryZybooks
cpsc256/Examples/Week11/LinkListDestructor/: LinkListDestructor
cpsc256/Examples/Week11/MileageTracker/: MileageTracker
cpsc256/Examples/Week11/TemplatedVector2/: TemplatedVector2  list.h  main.cpp
cpsc256/Examples/Week12/BinarySearchTree/: BinarySearchTree  main.cpp
cpsc256/Examples/Week12/Recursion/: Recursion  recursion.cpp
cpsc256/Examples/Week2/CSVFileReader/: FunctionExample
cpsc256/Examples/Week4/BasicPointers/: ArtistAndArtwork  BasicObjects  BasicVectorCPP  FunctionOverloading  HelloWorldCPP  Restaurant_C_Example  Tristan  factorial_solution  gplot_test  q1a  q1a_solution
cpsc256/Examples/Week4/Tristan/: main.c
cpsc256/Examples/Week5/Restaurant_C_Example/: main.c
cpsc256/Examples/Week6/FunctionOverloading/: main.cpp
cpsc256/Examples/Week7/BasicObjects/: BasicObjects  Restaurant.h
cpsc256/Examples/Week7/MultipleClasses/: Imperial.h  Metric.h  MultipleClasses
cpsc256/Examples/Week7/PassBy/: PassBy
cpsc256/Examples/Week8/PointersCPP/: PointersCPP  main.cpp
cpsc256/Examples/Week9/CopyConstructorExample/: CopyConstructorExample  main.cpp
